--- a/style.css
+++ b/style.css
@@ -1,68 +1,34 @@
-
-.pagina {
-    display: flex; 
-    justify-content: center; 
+body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: rgb(87, 62, 39);
-    
+    background-image: url("https://raw.githubusercontent.com/GabrielCerejo/meu-primeiro-repo/main/desfoque.PNG");
+    background-position: center;
+    background-size: 100%;
 }
-
-
-.cabecalho {
-    display: flex;
-    align-items:center;
-    flex-direction: column;
+.login {
+    width: 300px;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 0 0 10px gray;
+    background-color: #ccc;
+    opacity: 90%;
 }
-
-.pagina__registro {
-    display: flex;
-    flex-direction: column;
-    align-items: left; 
-    padding: 100px; 
-    border-radius: 40px; 
-    border: 5px solid black; 
-    background-color: rgb(255, 186, 151);
-    width: 650px;
-    height:550px;
+.login input, .login button{
+    width: calc(100% - 20px);
+    padding: 10px;
+    margin-top: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
-
-.pagina__registro__row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.pagina__registro__row__texto {
-    padding: 1rem 3rem 0.5rem 2rem;
-    border: 1px solid #d3d3d3;
-    background: rgb(239, 206, 193);
-    margin-right: 1rem;
-    border-radius: 16px;
-    border: 2px solid black;
-}
-
-.pagina__registro__row__caixa {
-    height: 20%;
-    margin-right: 20px;
-    border: 1px solid rgb(87, 62, 38);
-    border-radius: 15px;
-    width: 150px;
-    height: 30px;
-    position: end;
-}
-
-.pagina__botao__posicao {
+#div_mensagem, #div_tentativa{
+    color: red;
+    margin-top: 10px;
     text-align: center;
-}
-
-.pagina__botao {
-    background-color: black;
-    border: 1px solid #000000;
-    color: white;
-    border-radius: 24px;
-    padding: 15px 0;
-    width: 150px;
-    text-align: center;
-    
 }
