--- a/style.css
+++ b/style.css
@@ -1,67 +1,42 @@
-.pagina {
-    display: flex; 
-     justify-content: center; 
-     align-items: center;
-     height: 100vh;
-     background-color: rgb(87, 62, 39); 
-     
- }
- 
- 
- .cabecalho {
-     display: flex;
-     align-items:center;
-     flex-direction: column;
- }
- 
- .pagina__registro {
-     display: flex;
-     flex-direction: column;
-     align-items: center; 
-     padding: 100px; 
-     border-radius: 40px; 
-     border: 5px solid black; 
-     background-color: rgb(255, 186, 151);
-     width: 150px;
-     height:250px;
- }
- 
- .pagina__registro__row {
-     display: flex;
-     flex-direction: row;
-     align-items: center;
- }
- 
- .pagina__registro__row__texto {
-     padding: 0.5rem 2rem 0.5rem 2rem;
-     border: 1px solid #d3d3d3;
-     background: rgb(239, 206, 193);
-     margin-right: 1rem;
-     border-radius: 15px;
-     border: 2px solid black;
- }
- 
- .pagina__registro__row__caixa {
-     height: 20%;
-     margin-right: 10px;
-     border: 1px solid rgb(87, 62, 38);
-     border-radius: 15px;
-     width: 150px;
-     height: 30px;
-     position: end;
- }
- 
- .pagina__botao__posicao {
-     text-align: center;
- }
- 
- .pagina__botao {
-     background-color: black;
-     border: 1px solid #000000;
-     color: white;
-     border-radius: 24px;
-     padding: 15px 0;
-     width: 150px;
-     text-align: center;
-     
- }
+body {
+    background-image: url(file:///C:/Users/user/Downloads/Design%20sem%20nome.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+    
+    h1 {
+        margin: 1%;
+    color:#f4d800 ;
+    width:fit-content;
+    }
+    .blocopai {
+    margin: 1%;
+    font-size: larger;
+    display: flex;
+    flex-direction: column;
+    width:fit-content;
+    height:fit-content;
+    color: #ffffff;
+    border-radius: 5px;
+    }
+    
+    #demo2, #demo3, #demo4, #demo5{
+
+    background-color: #dcdcdc;
+    border-radius: 5px; 
+    padding: 5px;
+    color: rgb(5, 5, 5);
+    width: 400px;
+    height: 50px;
+    font-weight: 500;
+    }
+    
+    .botao {
+        margin: 1%;
+    font-size: larger;
+    display: flex;
+    color:white;
+    width:fit-content;
+    height:fit-content;
+    background-color:#b3b309;
+    }
