--- a/Telas modelo - Bia/style-cadastro.css
+++ b/Telas modelo - Bia/style-cadastro.css
@@ -15,11 +15,14 @@ body {
 
 .blocoLogin {
     display: flex;
-    height: 425px;
+    height: 450px;
     width: 480px;
     border-radius: 20px;
     background-color:rgb(8, 17, 10);
     margin-top: 5%;
+    border: solid;
+    border-color: #ffbf00;
+    border-width: 2px;
 }
 
 h2{
@@ -51,4 +54,15 @@ h2{
  button:hover {
     background-color: #fbff00;
   }
-  
+ #div_mensagem {
+    color: aliceblue;
+ }
+
+ .box2 {
+    display: flex;
+    height: 425px;
+    width: 465px;
+    border-radius: 20px;
+    background-color:rgb(116, 124, 118);
+    margin-top: 5%;
+ }
