--- a/cadastro-patroni/styleinstitucionalAtt1.css
+++ b/cadastro-patroni/styleinstitucionalAtt1.css
@@ -1,153 +1,221 @@
 body{
-    margin: 0%;
-    padding: 0;
-    background-image: url(Captura\ de\ tela\ 2024-04-02\ 152446\ \(1\).png);
-    
-  }
-    .header {
-    background: rgb(255,255,255);
-    display: flex;
-    flex-direction: row;
-    border-radius: 0px 50px 50px 0px ;
-    padding: 1rem 2rem;
-    position: fixed;
-    width: 3000px;
-    border-bottom: black 5px solid;
-    
-  }
+  margin: 0%;
+  padding: 0;
+  background-image: url(Captura\ de\ tela\ 2024-04-02\ 152446\ \(1\).png);
   
-  .container {
-    display: flex;
-    margin: auto;
-    border-radius: 45px;
-    align-items: center; 
-  }
-  
-  .header .container {
-    justify-content: space-evenly;
-  
-  }
-  
+}
+  .header {
+  background: #1e371b;
+  display: flex;
+  flex-direction: row;
+  border-radius: 0px 50px 50px 0px ;
+  padding: 1rem 2rem;
+  position: fixed;
+  width: 100%;  
+}
 
-  .navbar {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    width: 300px;
-    justify-content: space-between;
-    color: #e3b062;
-    align-items: end; 
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    
+.container {
+  display: flex;
+  margin: auto;
+  border-radius: 45px;
+  align-items: center; 
+}
+
+.header .container {
+  justify-content: space-evenly;
+
+}
+
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  width: 400px;
+  justify-content: space-between;
+  color: #e3b062; 
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  
+}
+
+.pagina1_bloco {
+  display: flex;
+  flex-direction: row;
+  padding: 70px; 
+  background-color: #1e371b;
+  width: 120px;
+  height: 700px;
   }
 
-  .pagina1_bloco {
+.logo {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.img1 {
+  width: 500px;
+  height: 500px;
+  align-items: flex-start;
+  margin-top: 100px;
+}
+
+.texto1 {
+  margin-left: 350px;
+  font-family: Arial, sans-serif;  
+  line-height: 1.5; 
+  letter-spacing: 1px; 
+  text-align: justify;
+  color: white;
+  width: 400px;
+  margin-left: 400px;
+  margin-top: 300px;
+}
+
+.pagina1final {
+  border-top: black 5px solid;
+}
+
+.banner {
+  background-color: white;
+  padding: 100px;
+  }
+
+.teste1{
     display: flex;
     flex-direction: row;
-    padding: 70px; 
-    background-color: #1e371b;
-    width: 100px;
-    height: 700px;
+    align-items: center;
+
     }
 
-  .logo {
+.foto1 {
     display: flex;
-    justify-content: space-evenly;
+    margin-left: 100px;
+}
+
+.paragrafo1 {
+  margin-left: 180px;
+  font-family: Arial, sans-serif;  
+  line-height: 1.5; 
+  letter-spacing: 1px; 
+  text-align: justify;
+}
+
+.img2 {
+  width: 650px;
+  height: 350px;
+  border: #e3b062 solid 4px;
+}
+
+
+.teste2{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-around;
   }
 
-  .img1 {
-    width: 500px;
-    height: 500px;
-    align-items: flex-start;
-    margin-top: 150px;
+.img3 {
+  width: 55%;
+  align-items: center;
+}
+
+.img4 {
+  width: 180px;
+  align-items: center;
+}
+
+.img5 {
+  width: 75%;
+  align-items: center;
+}
+
+.texto2 {
+  display: flex;
+  font-family: Arial, sans-serif;  
+  line-height: 1.5; 
+  letter-spacing: 1px;
+  margin-top: 20px; 
+  text-align: justify;
+  color: black;
+  justify-content: space-between;
+  align-items: center;
+  width: 400px;
+}
+
+.temp {
+  align-items: center;
+  text-align: center;
+  margin-right: 2%;
+}
+
+.banner2 {
+  background-color: #1e371b;
+  padding: 100px;
   }
-  
-  .texto1 {
-    margin-left: 350px;
+
+  .texto3 {
+    display: flex;
     font-family: Arial, sans-serif;  
     line-height: 1.5; 
-    letter-spacing: 1px; 
+    letter-spacing: 1px;
+    margin-top: 20px; 
+    margin-right: 10%;
     text-align: justify;
     color: white;
+    justify-content: space-between;
+    align-items: center;
     width: 400px;
-    margin-left: 400px;
-    margin-top: 400px;
+  }  
+
+  .img6 {
+    width: 30%;
+  align-items: center;
   }
 
-  .pagina1final {
-    border-top: black 5px solid;
+  .img7 {
+    width: 30%;
   }
 
-  .banner {
-    background-color: white;
-    padding: 100px;
-    }
-
-  .teste1{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
+  .texto4 {
+    display: flex;
+    font-family: Arial, sans-serif; 
+    color:#e3b062; 
+    flex-direction: row;
+    font-size: 25px;
+    margin-left: 500px;
+  }  
   
-      }
-
-  .foto1 {
-      display: flex;
-      margin-left: 250px;
-  }
-
-  .paragrafo1 {
-    margin-left: 300px;
-    margin-right: 150px;
-    font-family: Arial, sans-serif;  
-    line-height: 1.5; 
-    letter-spacing: 1px; 
-    text-align: justify;
-  }
-  
-  .img2 {
-  width: 500px;
-  border: #e3b062 solid 4px;
-  }
-
-
-  .teste2{
+  .teste3 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    justify-content: space-around;
-    }
-
-  .img3 {
-    width: 250px;
-    align-items: center;
   }
 
-  .img4 {
-    width: 250px;
-    align-items: center;
-  }
-
-  .img5 {
-    width: 250px;
-    align-items: center;
-  }
-
-  .texto2 {
-    display: flex;
+  .texto5 {
+    flex-direction: row;
     font-family: Arial, sans-serif;  
     line-height: 1.5; 
-    letter-spacing: 1px; 
+    letter-spacing: 1px;
     text-align: justify;
-    color: black;
-    justify-content: space-between;
-    text-align: center;
     align-items: center;
-    width: 300px;
+    margin-left: 250px;
+    margin-bottom: 300px;
   }
 
-  .temp {
-    align-items: center;
-    text-align: center;
+  .teste4 {
+    font-family: Arial, sans-serif;
+    border: 1px solid #1e371b;
+    border-radius: 15px;
+    background-color: #1e371b;
+    color: white;
+    font-size: medium;
+    margin-top: 100px;
+    width: 2000px;
+    height: 50px;
+  }
+  
+  .texto6 {
+    margin-left: 20%;
   }
 
