--- a/site.institucional.viniciusmiralha/style2.css
+++ b/site.institucional.viniciusmiralha/style2.css
@@ -1,82 +1,236 @@
-body{
-background-image: url(https://raw.githubusercontent.com/HDP-Historical-Document-Preservation/FrontEnd/main/Telas%20modelo%20-%20Bia/Captura%20de%20tela%202024-04-02%20152446.png);
-background-size: cover;
+.negra {
+  background-color: black;
+  opacity: 50%;
 }
 
-
+body{
+  margin: 0%;
+  padding: 0;
+  background-image: url(fundo.png);
+ 
+  
+}
+  .header {
+ 
+  display: flex;
+  flex-direction: row;
+  border-radius: 0px 50px 50px 0px ;
+  padding: 1rem 2rem;
+  position: fixed;
+  width: 100%;  
+}
 
 .container {
-  font-size:large;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
   display: flex;
-  width: 80%;
   margin: auto;
-  justify-content: space-between;
+  border-radius: 45px;
+  align-items: center; 
 }
+
+.header .container {
+  justify-content: space-evenly;
+
+}
+
 
 .navbar {
+  font-size: large;
+  position: fixed;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   list-style: none;
-  width: 300px;
+  width: 400px;
   justify-content: space-between;
-  color: #ffffff;
-  align-items: center;   
+  color:whitesmoke; 
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  margin: 16px;
+  
 }
 
-.banner{
-  padding: 40px 20px 30px 10px;
-  color: #fff;
-  height: 400px;
+.pagina1_bloco {
+  display: flex;
+  flex-direction: row;
+  padding: 70px; 
+  background-color: #0b382b;
+  width: 120px;
+  height: 700px;
+  }
+
+.logo {
+  display: flex;
+  justify-content: space-evenly;
+  
 }
-.banner .container{
-  justify-content: left;
-  align-items: center;
-  height: 100%;
-}
-.banner .container p{
-  font-size: 36px;
-  width: 25%;
-}
-.banner .container p span{
-  font-weight: bold;
-}
-.social{
+
+.img1 {
+  align-self: start;
+  width: 620px;
   height: 500px;
+  align-items: flex-start;
+  margin-top: 100px;
+}
+
+.texto1 {
+  margin-left: 350px;
+  font-family: Arial, sans-serif;  
+  line-height: 1.5; 
+  letter-spacing: 1px; 
+  text-align: justify;
+  color: white;
+  width: 400px;
+  margin-left: 400px;
+  margin-top: 300px;
+}
+
+.pagina1final {
+  border-top: black 5px solid;
+}
+
+.banner {
   background-color: white;
-  padding: 40px 0;
+  padding: 100px;
+  }
+
+.teste1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    }
+
+.foto1 {
+    display: flex;
+    margin-left: 100px;
 }
-.card{
- margin-top: 20%;
-  width: 300px;
-  text-align: center;
+
+.paragrafo1 {
+  margin-left: 180px;
+  font-family: Arial, sans-serif;  
+  line-height: 1.5; 
+  letter-spacing: 1px; 
+  text-align: justify;
 }
-.card img{
-  width: 100px;
+
+.img2 {
+  width: 650px;
+  height: 350px;
+  border: #e3b062 solid 4px;
 }
-.card h4{
-  font-size: 24px;
-}
-.social .container{
-  justify-content: space-between;
-}
-.footer{
-  width: 100%;
-  color: #ffffff;
-  height: 500px;
-  background-color: #0f3017;
-}
-.footer .container{
-  justify-content: center;
+
+
+.teste2{
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  height: 100%;
+  justify-content: center;
+  justify-content: space-around;
+  }
+
+.img3 {
+  width: 55%;
+  align-items: center;
 }
-.footer .container p{
-  font-weight: bold;
+
+.img4 {
+  width: 180px;
+  align-items: center;
 }
-.logo{
-  padding: 30px;
-  height: 200px;
-  justify-content: flex-start;
+
+.img5 {
+  width: 75%;
+  align-items: center;
+}
+
+.texto2 {
+  display: flex;
+  font-family: Arial, sans-serif;  
+  line-height: 1.5; 
+  letter-spacing: 1px;
+  margin-top: 20px; 
+  text-align: justify;
+  color: black;
+  justify-content: space-between;
+  align-items: center;
+  width: 400px;
+}
+
+.temp {
+  align-items: center;
+  text-align: center;
+  margin-right: 2%;
+}
+
+.banner2 {
+  background-color: #0b382b;
+  padding: 100px;
+  }
+
+  .texto3 {
+    display: flex;
+    font-family: Arial, sans-serif;  
+    line-height: 1.5; 
+    letter-spacing: 1px;
+    margin-top: 20px; 
+    margin-right: 10%;
+    text-align: justify;
+    color: white;
+    justify-content: space-between;
+    align-items: center;
+    width: 400px;
+  }  
+
+  .img6 {
+    width: 30%;
+  align-items: center;
+  }
+
+  .img7 {
+    width: 30%;
+    height: 40%;
+  }
+
+  .texto4 {
+    display: flex;
+    font-family: Arial, sans-serif; 
+    color:#e3b062; 
+    flex-direction: row;
+    font-size: 25px;
+    margin-left: 500px;
+  }  
+  
+  .teste3 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .texto5 {
+    flex-direction: row;
+    font-family: Arial, sans-serif;  
+    line-height: 1.5; 
+    letter-spacing: 1px;
+    text-align: justify;
+    align-items: center;
+    margin-left: 250px;
+    margin-bottom: 300px;
+  }
+
+  .teste4 {
+    font-family: Arial, sans-serif;
+    border: 1px solid  #0b382b;
+    border-radius: 15px;
+    background-color: #0b382b;
+    color: white;
+    font-size: medium;
+    margin-top: 100px;
+    width: 2000px;
+    height: 50px;
+  }
+  
+  .texto6 {
+    margin-left: 20%;
+  }
+  
+p{
+  margin-right: 70px;
 }
