--- a/Telas da Dashboard/style-Inicial.css
+++ b/Telas da Dashboard/style-Inicial.css
@@ -7,42 +7,75 @@ body {
 
 .container {
     display: flex;
-    margin: auto;
-    justify-content: flex-end;
-    margin-right: 100px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 150px;
 }
+
+.logo {
+    margin-right: 0%;
+    height: 50px;
+    width: 110px;
+    background-image: url('logo.png');
+    background-size: cover;
+}
+
 
 .header {
-    background-color: #370505;
-}
-
-.header .container {
     display: flex;
     align-items: flex-end;
 
 }
 
+.blocoNavbar {
+    display: flex;
+    justify-content: flex-end;
+    background-color: #370505;
+    width: 1200px;
+    height: 50px;
+}
+
+.trianguloDireita {
+    padding: 0%;
+    width: 0;
+    height: 0;
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    border-left: 25px solid #370505;
+}
+
+.trianguloBaixo {
+    margin-top: 10%;
+    width: 0; 
+    height: 0; 
+    border-left: 190px solid transparent;
+    border-right: 190px solid transparent;
+    border-top: 35px solid #D9D9D9;
+  }
+  
 .navbar {
     display: flex;
     flex-direction: row;
+    margin-right: 5%;
     justify-content: space-between;
     list-style: none;
     width: 300px;
-    color: #ffffff
+    color: #ffffff;
 }
 
 .blocoLateral {
     display: flex;
     flex-direction: column;
     width: 250px;
-    height: 92vh;
+    height: 93.5vh;
     background-color: #370505;
     align-items: center;
 }
 
 
 .menu .foto {
-    margin-top: 25px;
+
     margin-left: 30px;
     width: 100px;
     height: 100px;
@@ -79,11 +112,13 @@ body {
     display: flex;
     margin-top: 120px;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
+    align-items: self-start;
+
 }
 
+
 .acesso h3 {
+    font-family: 'Times New Roman';
     display: flex;
     margin: 10%;
     color: #ffffff;
@@ -103,7 +138,12 @@ body {
     display: flex;
     flex-direction: row;
 }
-
+.alerta {
+    display: flex;
+    margin-right: 7%;
+    flex-direction: row;
+    justify-content: space-between;
+}
 .titulo {
     display: flex;
     flex-direction: column;
@@ -111,6 +151,11 @@ body {
     justify-content: flex-start;
 }
 
+ img {
+    margin-top: 15%;
+    width: 50px;
+    height: 50px;
+}
 
 .titulo h4 {
     margin: 2% 0% 0% 0%;
@@ -124,6 +169,7 @@ body {
 }
 
 .cardGeral {
+    height: 80vh;
     display: flex;
     margin-top: 5%;
     flex-direction: row;
@@ -132,31 +178,39 @@ body {
 
 }
 
+.blocoAuxiliar {
+    height: 45vh;
+    width: 28vw;
+    background-color: #795e5e;
+}
+
+
 .card {
     display: flex;
     flex-direction: column;
-    height: 45vh;
+    height: 60vh;
     width: 28vw;
     background-color: #D11313;
-    border-radius: 20px;
+    border-radius: 20px 20px 0px 0px;
+    align-items: center; 
     justify-content: center;
-    align-items: center;
 }
 
 .cardInt {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 25vh;
-    width: 20vw;
+    height: 700%;
+    width: 73%;
     background-color: #D9D9D9;
     border-radius: 20px;
     border: solid rgb(20, 20, 20);
     border-width: 2px;
-    margin-bottom: 8%;
+    margin-bottom: 4%;
+    margin-top: 10%;
 }
 
-.cardInt h1 {
+.card .cardInt h1 {
     margin: 5%;
     color: #FF914D;
     font-size: 350%;
@@ -164,7 +218,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.cardInt h4 {
+.card .cardInt h4 {
     margin-top: 2%;
     margin-bottom: 0%;
     color: #370505;
@@ -172,7 +226,7 @@ body {
     font-family: Helvetica;
 }
 
-.cardInt h5 {
+.card .cardInt h5 {
     margin: 0%;
     color: #370505;
     font-size: 150%;
@@ -182,12 +236,20 @@ body {
 .card button {
     height: 6vh;
     width: 20vw;
+    margin-top: 5%;
     background-color: #370505;
     color: #ffffff;
     font-size: larger;
     font-weight: bold;
     border: none;
     border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+button:hover {
+    background-color: #ff8800;
+
 }
 
 
@@ -198,20 +260,30 @@ body {
 }
 
 .infoExtra {
-    height: 25vh;
+    margin-top: 5%;
+    height: 22vh;
     width: 28vw;
     background-color: #D9D9D9;
-    border-bottom-left-radius: 80px;
-    border-bottom-right-radius: 80px;
     align-items: center;
 }
 
-.conteudo2 {
-    display: flex;
-    flex-direction: column;
-    width: 95vw;
-    height: 92vh;
-    background-color: beige;
+.textoExtra {
+    margin-top: 7%;
+}
+
+.infoExtra .textoExtra span {
+    font-family: 'Be VietnamBold';
+    margin-left: 3%;
+    margin-top: 5%;
+    font-size: 85%;
+    text-align: center;
+}
+.infoExtra .textoExtra span p {
+    font-family: 'Be VietnamLight';
+    margin-left: 2%;
+    margin-right: 2%;
+    font-size: 96%;
+    text-align: center;
 }
 
 .avisoG {
@@ -231,24 +303,43 @@ body {
     height: 17vh;
     background-color: #D9D9D9;
     border-radius: 25px;
-    justify-content: flex-end;
-    
+    justify-content: space-between;
+
 }
 
-.blocoInterno {
-    width: 13vw;
-    height: 16vh;
-    border-radius: 25px;
-    background-color: #D11313;
-    border: solid black;
-    border-width: 0.5%;
+@font-face {
+    font-family: Be VietnamBold;
+    src: url(BeVietnam-Bold.ttf);
+}
+
+@font-face {
+    font-family: Be VietnamLight;
+    src: url(BeVietnam-Light.ttf);
+}
+
+.avisoG {
+    display: flex;
+    flex-direction: column;
+}
+
+.blocoAviso span {
+    margin-left: 4%;
+    margin-top: 1%;
+    margin-bottom: 0%;
+    font-family: "Be VietnamBold";
+    font-size: larger;
+}
+
+.blocoAviso span p {
+    font-family: "Be VietnamLight";
+    font-size: medium;
 }
 
 .abaOrdenar {
     display: flex;
     flex-direction: row;
     width: 80vw;
-    height: 17vh;
+    height: 13vh;
     justify-content: flex-end;
 }
 
@@ -259,12 +350,134 @@ body {
 .selecaoGeral {
     display: flex;
     flex-direction: row;
-    margin-top: 3%;
+    margin-top: 1%;
     width: 50vw;
     height: 15vh;
-    justify-content: space-evenly ;
+    justify-content: flex-start;
 }
 
 .selecao {
     display: flex;
+    justify-content: flex-start;
+}
+
+.selecao select {
+    display: flex;
+    justify-content: center;
+    background-color: #D9D9D9;
+    width: 15vw;
+    height: 5vh;
+    border-radius: 10px;
+}
+
+.blocoInterno {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 20vw;
+    height: 16vh;
+    border-radius: 25px;
+    border-width: 1mm;
+    background-color: #D11313;
+    border: solid black;
+
+}
+
+.cardInt2 h1 {
+    margin: 5%;
+    color: #ffffff;
+    font-size: 200%;
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+
+}
+
+.cardInt2 h4 {
+    margin-top: 2%;
+    margin-bottom: 0%;
+    color: #D9D9D9;
+    font-size: 100%;
+    font-family: Helvetica;
+    text-align: center;
+
+}
+
+
+.listaG {
+    display: flex;
+    flex-direction: row;
+    background-color: #D9D9D9;
+    width: 70vw;
+    height: 47.5vh;
+    margin-left: 8%;
+    border-radius: 7px;
+}
+
+.listasTU {
+    display: flex;
+    flex-direction: column;
+    height: 43.5vh;
+    width: 35vw;
+    align-items: flex-start;
+}
+ .listasTU .scroll {
+    overflow: auto;
+ }
+
+ .scroll::-webkit-scrollbar {
+    width: 4px; 
+  }
+  
+  .scroll::-webkit-scrollbar-track {
+    background: beige;        /* color of the tracking area */
+  }
+  
+  .scroll::-webkit-scrollbar-thumb {
+    background-color: #ff8800;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid #ff8800;  /* creates padding around scroll thumb */
+  }
+.listaG h3 {
+    font-family: "Be VietnamBold";
+    font-size: medium;
+}
+.listaG .listasTU button {
+    margin-left: 3%;
+    margin-bottom: 4%;
+    background-color: #D9D9D9;
+    border: none;
+    cursor: pointer;
+    font-family: "Be VietnamBold";
+    font-size: medium;
+}
+
+.listaG .listasTU h3 {
+    margin-left: 8%;
+    font-family: "Be VietnamBold";
+    font-size: medium;
+}
+
+.listasTU span {
+    margin: 8px;
+    font-family: "Be VietnamLight";
+    font-weight: bold;
+}
+
+.linha {
+    margin-right: 1%;
+    height: 45.5vh;
+    width: 0.25vw;
+    background-color: #504e4e;
+}
+
+
+.grafico {
+    display: flex;
+    flex-direction: row;
+    margin-top: 3%;
+    margin-left: 2%;
+    width: 35vw;
+    height: 35vh;
 }
