--- a/calculadora-financeira-HDP/style.css
+++ b/calculadora-financeira-HDP/style.css
@@ -1,9 +1,41 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #1e371b;
+    background-color: #370505;
     margin: 0;
     padding: 0;
     overflow: hidden;
+}
+
+.header {
+    background-color: beige;
+    display: flex;
+    flex-direction: row;
+    padding: 1rem 0rem;
+    width: 100%;
+    border: 2px solid black;
+    height: 30px;
+    margin:auto;
+    align-items: center;
+   
+}
+/*   */
+
+
+.header .cointaner {
+    justify-content: space-evenly;
+}
+
+.navbar{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    width: 400px;
+    justify-content: space-between;
+    color: #370505;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    margin-left: 1100px;
+    
 }
 
 #box {
@@ -14,7 +46,7 @@ body {
     width: 90%;
     height: 90%;
     margin: 50px auto;
-    margin-top: 90px;
+    margin-top: 55px;
 }
 
 center {
@@ -44,10 +76,8 @@ input {
     font-size: 16px;
 }
 
-
-
 button {
-    background-color: #1e371b;
+    background-color: #370505;
     color: #ffffff;
     cursor: pointer;
     width: 150px;
@@ -57,10 +87,12 @@ button {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+    transition: 1s;
 }
 
 button:hover {
     background-color: #152014;
+    transition: 1s;
 }
 
 span {
@@ -69,11 +101,16 @@ span {
 }
 
 strong {
-    color: #1e371b;
+    color: #370505;
 }
 
 input[type="text"]::placeholder {
     color: #999;
+}
+
+img{
+    width: 5%;
+    margin-left: 2%;
 }
 
 
