--- a/cadastro-cerejo/style-cadastro.css
+++ b/cadastro-cerejo/style-cadastro.css
@@ -9,14 +9,17 @@ body {
     background-image: url("https://github.com/HDP-Historical-Document-Preservation/FrontEnd/blob/main/Telas%20modelo%20-%20Bia/Captura%20de%20tela%202024-04-02%20152446.png?raw=true");
     background-position: center;
     background-size: 100%;
+    overflow: hidden;
 }
 
 .container{
     display: flex;
+    width: 100vw;
+    height: 100vh;
 }
 
 .header {
-    background-color: beige;
+    background-color: #370505;
     display: flex;
     flex-direction: row;
     padding: 1rem 0rem;
@@ -32,7 +35,7 @@ body {
     list-style: none;
     width: 400px;
     justify-content: space-between;
-    color: #370505;
+    color: beige;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     margin-left: 950px;
@@ -51,6 +54,8 @@ img{
     border-radius: 5px;
     box-shadow: 0 0 10px black;
     background-color: #370505;
+    margin-left: 26%;
+    margin-top: 5%;
 }
 
 .cadastro input,
