--- a/Telas da Dashboard/style-Inicial.css
+++ b/Telas da Dashboard/style-Inicial.css
@@ -308,7 +308,7 @@ button:hover {
 }
 
 @font-face {
-    font-family: Be VietnamBold;
+    font-family: Be VietnamBold;  /* foram instaladas fontes externas, para isso foi necessário criar um nome(apelido) para a fonte e em seguida adicionar a sua url*/
     src: url(BeVietnam-Bold.ttf);
 }
 
@@ -423,21 +423,21 @@ button:hover {
     align-items: flex-start;
 }
  .listasTU .scroll {
-    overflow: auto;
+    overflow: auto; /* comando que permite a criação do scroll, o auto significa que ele aparecerá apenas quando for necessário */
  }
 
  .scroll::-webkit-scrollbar {
-    width: 4px; 
+    width: 4px; /* largura do scroll */
   }
   
   .scroll::-webkit-scrollbar-track {
-    background: beige;       /* color of the tracking area */
+    background: beige;       /* cor da área que o scroll está inserido */
   }
   
   .scroll::-webkit-scrollbar-thumb {
-    background-color: #ff8800;    /* color of the scroll thumb */
-    border-radius: 20px;       /* roundness of the scroll thumb */
-    border: 3px solid #ff8800;  /* creates padding around scroll thumb */
+    background-color: #ff8800;    /* cor do scroll */
+    border-radius: 20px;       /* arredondamento da borda do scroll */
+    border: 3px solid #ff8800;  /* cor da borda do scroll */
   }
 .listaG h3 {
     font-family: "Be VietnamBold";
