--- a/Site Completo/HDP-site/style-calculadora.css
+++ b/Site Completo/HDP-site/style-calculadora.css
@@ -12,7 +12,7 @@ body {
   
   
   .header {
-    background-color: beige;
+    background-color: #ffffff;
       display: flex;
       padding: 1rem 0rem;
       width: 100vw;
@@ -58,7 +58,7 @@ body {
   }
   
 #box {
-    background-color: beige;
+    background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -71,6 +71,7 @@ body {
 center {
     margin-bottom: 40px;
     border-bottom: solid 1px black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #box2 {
@@ -79,10 +80,13 @@ center {
 
 #conteudo {
     width: 50%;
+    font-family: Arial, sans-serif;
 }
 
 #div_mensagem {
     width: 50%;
+    font-family: Arial, sans-serif;
+
 }
 
 input {
@@ -93,6 +97,7 @@ input {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+    font-family: Arial, sans-serif;
 }
 
 button {
