--- a/Site Completo/HDP-site/style-site.css
+++ b/Site Completo/HDP-site/style-site.css
@@ -38,7 +38,7 @@ body {
   list-style: none;
   width: 400px;
   justify-content: space-between;
-  color: beige;
+  color: #ffffff;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
   margin-left: 730px;
@@ -53,7 +53,7 @@ img{
 
 .navbar a {
   text-decoration: none;
-  color: beige;
+  color: #ffffff;
 }
 
 .logo {
@@ -142,9 +142,10 @@ img{
   justify-content: center;
   margin-right: 2%;
   flex-direction: row;
-  border: 2px solid #DD940D;
+  border: 2px solid #0f1d0e;
   background-color: #d9d9d99a;
   border-radius: 15px;
+  padding: 1%;
 }
 
 .box .img3 {
@@ -269,9 +270,9 @@ img{
 
 .containerCalculadora button{
   font-family: Arial, sans-serif;
-  border: 1px solid #1e371b;
+  border: 1px solid #0f1d0e;
   border-radius: 15px;
-  background-color: #1e371b;
+  background-color: #0f1d0e;
   color: white;
   font-size: medium;
   width: 15vw;
