--- a/Site Completo/HDP-site/style-cadastro.css
+++ b/Site Completo/HDP-site/style-cadastro.css
@@ -48,6 +48,14 @@ body {
     margin-left: 730px;
 }
 
+.navbar li:hover{
+    color: #fbff00;
+}
+
+.navbar a:hover{
+    color: #fbff00;
+}
+
 .navbar a {
     text-decoration: none;
     color: #ffffff;
