--- a/Site Completo/HDP-site/style-dashboard.css
+++ b/Site Completo/HDP-site/style-dashboard.css
@@ -434,7 +434,7 @@ a {
   }
   
   .scroll::-webkit-scrollbar-track {
-    background: #ffffff;       /* cor da área que o scroll está inserido */
+    background: #D9D9D9;       /* cor da área que o scroll está inserido */
   }
   
   .scroll::-webkit-scrollbar-thumb {
