--- a/Site Completo/HDP-site/style-calculadora.css
+++ b/Site Completo/HDP-site/style-calculadora.css
@@ -39,11 +39,11 @@ body {
   }
 
   .navbar li:hover{
-    color: #ffbf00;
+    color: #fbff00;
   }
 
   .navbar a:hover{
-    color: #ffbf00;
+    color: #fbff00;
   }
   
   
