--- a/Site Completo/HDP-site/style-site.css
+++ b/Site Completo/HDP-site/style-site.css
@@ -45,11 +45,11 @@ body {
 }
 
 .navbar a:hover{
-  color: #ffbf00;
+  color: #fbff00;
 }
 
 .navbar li:hover{
-  color: #ffbf00;
+  color: #fbff00;
 }
 
 
