--- a/Site Completo/web-data-viz/public/css/style-cadastro.css
+++ b/Site Completo/web-data-viz/public/css/style-cadastro.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("fundoCadastro.png");
+    background-image: url("../assets/imgs/fundoCadastro.png");
     background-position: center;
     background-size: 100%;
     overflow: hidden;
