pronto para implementação

--- a/hdp/public/css/style-calculadora.css
+++ b/hdp/public/css/style-calculadora.css
@@ -39,11 +39,11 @@ body {
   }
 
   .navbar li:hover{
-    color: #fbff00;
+    color: #ffbf00;
   }
 
   .navbar a:hover{
-    color: #fbff00;
+    color: #ffbf00;
   }
   
   
