--- a/hdp/public/css/style-login.css
+++ b/hdp/public/css/style-login.css
@@ -12,11 +12,11 @@ body{
 }
 
 .navbar li:hover{
-    color: #fbff00;
+    color: #ffbf00;
 }
 
 .navbar a:hover{
-    color: #fbff00;
+    color: #ffbf00;
 }
 
 .container{
@@ -55,11 +55,11 @@ body{
 }
 
 .navbar a:hover{
-    color: #fbff00;
+    color: #ffbf00;
 }
 
 .navbar li:hover{
-    color: #fbff00;
+    color: #ffbf00;
 }
 
 .navbar a {
