--- a/hdp/public/css/style-site.css
+++ b/hdp/public/css/style-site.css
@@ -45,11 +45,11 @@ body {
 }
 
 .navbar a:hover{
-  color: #fbff00;
+  color: #ffbf00;
 }
 
 .navbar li:hover{
-  color: #fbff00;
+  color: #ffbf00;
 }
 
 
