--- a/hdp/public/css/style-dashboard.css
+++ b/hdp/public/css/style-dashboard.css
@@ -25,7 +25,7 @@ body {
     margin-right: 0%;
     height: 50px;
     width: 110px;
-    background-image: url('logo.png');
+    background-image: url('../assets/imgs/logo.png');
     background-size: cover;
 }
 
@@ -33,6 +33,7 @@ body {
 .header {
     display: flex;
     align-items: flex-end;
+    position: fixed;
 
 }
 
@@ -95,9 +96,15 @@ a {
     display: flex;
     flex-direction: column;
     width: 250px;
-    height: 93.5vh;
+    height: 98vh;
     background-color: #370505;
     align-items: center;
+    position: fixed;
+    margin-top: 3%;
+}
+
+.menu {
+    margin: 0%;
 }
 
 
@@ -117,7 +124,10 @@ a {
     display: flex;
     color: #ffffff;
     flex-direction: column;
-
+    font-size: x-large;
+    justify-content: center;
+    align-items: center;
+    margin-top: 22%;
 
 }
 
@@ -136,17 +146,17 @@ a {
 
 .acesso {
     display: flex;
-    margin-top: 120px;
+    margin-top: 140px;
+    margin-bottom: 120px;
     flex-direction: column;
-    align-items: self-start;
-
+    align-items: flex-start;
+    margin-left: 13%;
 }
 
 
 .acesso h3 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
-    margin: 10%;
     color: #ffffff;
 }
 
@@ -157,7 +167,8 @@ a {
     width: 95vw;
     height: 92vh;
     background-color: #ffffff;
-
+    margin-left: 18%;
+    margin-top: 5%;
 }
 
 .corpoGeral {
@@ -200,8 +211,6 @@ a {
     margin-top: 5%;
     flex-direction: row;
     justify-content: space-evenly;
-
-
 }
 
 .blocoAuxiliar {
@@ -606,5 +615,91 @@ a {
 #btnSala {
     width: 100%;
 }
+
+
+
+
+/* Página da IA */
+
+.conteudo2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 98%;
+    height: 100%;
+}
+
+.container2 {
+    background-color: #D9D9D9;
+    color: #1b0909;
+    font-family: "Be VietnamLight";
+    width: 60%;
+    height: fit-content;
+    border-radius: 30px;
+    padding: 3%;
+    box-shadow: inset #370505;
+
+}
+
+.boxTitulo2 {
+    display: flex;
+    width: 80vw;
+    height: 10vh;
+    position: fixed;
+}
+
+.titulo2 {
+    height: 15%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 3.4%;
+    
+}
+
+.titulo2 h4 {
+    margin: 2% 0% 0% 0%;
+    font-size: 200%;
+
+}
+
+.titulo2 p {
+    margin: 0;
+    color: grey;
+}
+
+.ajuda {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    height: fit-content;
+    margin-top: 10%;
+}
+#pergunta {
+    width: 60%;
+    border-radius: 10px;
+    font-family: "Be VietnamLight";
+
+}
+
+#resposta {
+    margin-top: 5%;
+    /* height: 15vh; */
+    overflow: auto;
+}
+
+.container2 button {
+    width: 10vw;
+    height: 5vh;
+    border-radius: 30px;
+    border: none;
+}
+
+.container2 button:hover{
+    background-color: rgb(221, 148, 13);
+    cursor: pointer;
+}
+
 
 
